# nanochat

./: README.md  pyproject.toml
nanochat/: checkpoint_manager.py  common.py  dataloader.py  dataset.py  engine.py  gpt.py  muon.py  tokenizer.py
scripts/: base_train.py  tok_train.py
